--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-image: url("./fondo.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
+body::before {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.4); /* Ajusta el color y la opacidad aquí */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Coloca la capa detrás del contenido principal */
+}
+.paddingfeo {
+  padding: 0 !important;
+}
