--- a/front/src/index.css
+++ b/front/src/index.css
@@ -2,25 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background-image: url("./fondo.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
+body::before {
+  backdrop-filter: brightness(0.5);
+}
+body::after {
+  backdrop-filter: brightness(0.5);
 }
 
-body::before {
-  content: "";
-  background-color: rgba(0, 0, 0, 0.4); /* Ajusta el color y la opacidad aquí */
-  position: absolute;
-  top: 0;
-  left: 0;
+body {
+  background: url(./fondo.jpg) center center fixed;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Coloca la capa detrás del contenido principal */
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+#root {
+  width: 100%;
+}
+
 .paddingfeo {
   padding: 0 !important;
+}
+@media (max-width: 768px) {
+  body {
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 }
